Adding in author + stability fix

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
-        android:id="@+id/dada"
+        android:id="@+id/txt_quote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="cursive"
@@ -20,75 +20,29 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/btn_info"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="346dp"
-        android:background="#FFFFFF"
-        android:contentDescription="InfoButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn_refresh"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/ic_info_outline" />
-
-    <ImageButton
-        android:id="@+id/btn_share"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="146dp"
-        android:layout_marginBottom="15dp"
-        android:background="#FFFFFF"
-        android:contentDescription="ShareButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_refresh"
-        tools:srcCompat="@drawable/ic_share" />
-
-    <ImageButton
-        android:id="@+id/btn_refresh"
-        android:layout_width="1dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="-1dp"
-        android:layout_marginTop="-1dp"
-        android:layout_marginEnd="-1dp"
-        android:layout_marginBottom="-1dp"
-        android:background="#FFFFFF"
-        android:contentDescription="RefreshButton"
-        app:layout_constraintBottom_toTopOf="@+id/btn_share"
-        app:layout_constraintEnd_toStartOf="@+id/btn_info"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/ic_refresh" />
-
-    <ImageButton
-        android:id="@+id/btn_timer"
-        android:layout_width="0dp"
-        android:layout_height="565dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="15dp"
-        android:background="#FFFFFF"
-        android:contentDescription="TimerButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/btn_share"
-        app:layout_constraintTop_toBottomOf="@+id/btn_info"
-        app:layout_constraintVertical_bias="0.0"
-        tools:srcCompat="@drawable/ic_av_timer" />
+        app:layout_constraintVertical_bias="0.413" />
 
     <TextView
         android:id="@+id/txt_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="~Author: Placeholder Author"
-        tools:layout_editor_absoluteX="45dp"
-        tools:layout_editor_absoluteY="364dp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="cursive"
+        android:text="@string/Placeholder_Author"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"
+        android:textSize="22sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_quote"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
